--- a/api/templates/checkout.html
+++ b/api/templates/checkout.html
@@ -1,4 +1,4 @@
-<form action="/transaction" method="PUT">
+<form action="/transactions" method="PUT">
     <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
         data-key="pk_test_Bd2TMQ2vDKpnZ0ZXvaf8R8Gf"
