--- a/api/templates/checkout.html
+++ b/api/templates/checkout.html
@@ -9,4 +9,5 @@
         data-locale="auto"
         data-zip-code="true">
     </script>
+    <input type="text" name="amount" value={{ amount }}>
 </form>
