Add hidden amount input.

--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -1,4 +1,5 @@
 <form action="/transactions/" method="POST">
+    <input type="hidden" name="amount" value={{ amount }} />
     <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
         data-key="pk_test_Bd2TMQ2vDKpnZ0ZXvaf8R8Gf"
