Change  post location.

--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -1,10 +1,10 @@
-<form action="/transactions/" method="POST">
+<form action="/deposits/" method="POST">
     <input type="hidden" name="amount" value={{ amount }} />
     <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
         data-key="pk_test_Bd2TMQ2vDKpnZ0ZXvaf8R8Gf"
         data-amount={{ amount }}
-        data-name="human api"
+        data-name="people api"
         data-description="Widget"
         data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
         data-locale="auto"
