Fix parsing error.

--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -2,7 +2,7 @@
     <input type="hidden" name="amount" value={{ amount }} />
     <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-        data-key={{ stripe-public-key }}
+        data-key={{ stripePublicKey }}
         data-amount={{ amount }}
         data-name="People API"
         data-description="Widget"
