--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -1,4 +1,5 @@
 <form action="/deposits/" method="POST">
+    {% csrf_token %}
     <input type="hidden" name="amount" value={{ amount }} />
     <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
