--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -8,8 +8,8 @@
         data-amount={{ amount }}
         data-name="People API"
         data-email={{ email }}
-        data-description="Widget"
-        data-image="https://imgur.com/z8gUC5B"
+        data-description="Deposit"
+        data-image="https://i.imgur.com/z8gUC5B.jpg"
         data-locale="auto">
     </script>
 </form>
