Add button back.

--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -4,6 +4,7 @@
     <script
         src="https://checkout.stripe.com/checkout.js"
         data-key={{ stripePublicKey }}
+        class="stripe-button"
         data-amount={{ amount }}
         data-name="People API"
         data-email={{ email }}
