--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -13,4 +13,8 @@
         data-locale="auto"
     >
     </script>
+    <script>
+        document.getElementsByClassName("stripe-button-el")[0].click();
+        //document.getElementsByClassName("stripe-button-el")[0].disabled=true;
+    </script>
 </form>
