--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -15,6 +15,6 @@
     </script>
     <script>
         document.getElementsByClassName("stripe-button-el")[0].click();
-        //document.getElementsByClassName("stripe-button-el")[0].disabled=true;
+        document.getElementsByClassName("stripe-button-el")[0].disabled=true;
     </script>
 </form>
