--- a/people/templates/checkout.html
+++ b/people/templates/checkout.html
@@ -14,7 +14,7 @@
     >
     </script>
     <script>
+        document.getElementsByClassName("stripe-button-el")[0].style.visibility='hidden';
         document.getElementsByClassName("stripe-button-el")[0].click();
-        document.getElementsByClassName("stripe-button-el")[0].disabled=true;
     </script>
 </form>
