--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method="post" action="social-login/">
+<form method="post" action="">
     {% csrf_token %}
     <table>
         <tr>
