--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
     </table>
 
     <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next }}" />
+    <input type="hidden" name="next" value="{{ request.POST.redirect_uri }}" />
 </form>
 
 {% endblock %}
